--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,13 @@
   <%= yield %>
   <%= render 'layouts/footer' %>
   <%= debug(params) if Rails.env.development? %>
+  <% if Rails.env.development? %>
+    <pre class="debug_dump">
+    <% request.headers.each do |k, v| %>
+<%= "#{k}: #{v}" %>
+    <% end %>
+    </pre>
+<% end %>
 </div>
 </body>
 </html>
