--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,6 +2,8 @@
   <%= gravatar_for user, size: 52 %>
   <%= link_to user.name, user %>
   <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to 'delete', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <br>
+    <%= link_to 'delete', user, method: :delete,
+                class: 'btn btn-danger btn-mini', data: { confirm: 'Are you sure?' } %>
   <% end %>
 </li>
